--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "8.x"
   },
   "author": "4edorov",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "nodemon": "^1.17.3"
+    "express": "^4.16.3"
   }
 }
